--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		<springframework.version>3.1.0.RELEASE</springframework.version>
 		<springframework.security.version>3.1.0.RELEASE</springframework.security.version>
 		<slf4j.version>1.6.4</slf4j.version>
+		<commons.fileupload.version>1.2.2</commons.fileupload.version>
 	</properties>
 
 	<repositories>
@@ -266,6 +267,11 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons.fileupload.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
