--- a/src/main/webapp/WEB-INF/logging.properties
+++ b/src/main/webapp/WEB-INF/logging.properties
@@ -20,4 +20,4 @@ DataNucleus.SchemaTool.level=WARNING
 #org.springframework.beans.factory.support.level=FINEST
 #org.springframework.security.level=FINEST
 
-com.jappstart.level=INFO
+com.fkb.level=INFO
