--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<gae.version>1.7.4</gae.version>
 		<gae.runtime>1.7.4</gae.runtime>
-		<gae.home>${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}</gae.home>
+		<!-- <gae.home>${settings.localRepository}/com/google/appengine/appengine-java-sdk/${gae.version}/appengine-java-sdk-${gae.version}</gae.home> -->
 		<rebel.home>${env.REBEL_HOME}</rebel.home>
 		<maven.gae.plugin.version>0.9.2</maven.gae.plugin.version>
 		<datanucleus.version>1.1.5</datanucleus.version>
